[1.42] 'Introduction' translated - faq/ports/testing.html

--- a/faq/ports/testing.html
+++ b/faq/ports/testing.html
@@ -33,33 +33,33 @@
 
 <h2 id="Introduction">Введение</h2>
 
-The <a href="ports.html">ports tree</a> is a huge piece of work
-that permits OpenBSD users to use third party programs without wasting time
-patching, configuring and installing each one individually.
-This work is done by a group of volunteers who spend their time porting and
-testing applications across the range of OpenBSD platforms.
+<a href="ports.html">Дерево портов</a> это колоссальная работа, результат
+которой позволяет каждому пользоватю OpenBSD исользовать third party программы
+без необходимости тратить время на изучение тонкостей их работы, внесение
+необходимых изменений (с целью запустить программы именно в среде OpenBSD),
+конфигурацию и установку.
+Вся эта работа проделывается группой волонтеров, кто тратит время и силы на
+портирование и тестирование приложений именно в среде OpenBSD.
 
 <p>
-Many people think that they cannot help this process because they do not have
-enough knowledge, but this is wrong because they can help porters work better
-and faster.
-Test submitted updates or new ports which are posted on the
-<a href="../../mail.html">ports mailing list</a>.
-By doing this, you reduce the latency of commits and also increase the number
-of ports to be committed.
-Many ports are not committed because of lack of testing.
+Многие думают, что они не могут помочь по причине того, что не обладают
+достаточной для этого процесса квалификацией. Это не верно. Каждый может помочь
+разработчикам (тем, кто занимается портированием софта) делать свою работу лучше
+и быстрее. Тестируйте обновления или новые порты, о которых сообщается в
+<a href="../../mail.html">рассылке, посвященной портам</a>.
+Делая это, вы уменьшаете задержку последюущих коммитов, а также увеличиваете
+количество портов, добавляемых в саму систему. Многие порты не добавленны
+лишь по причине того, что они до сих пор не протестированны.
 
 <p>
-The ports tree is developed against <a href="../faq5.html#Flavors">-current</a>;
-there is no guarantee that new ports or updates will work correctly on the
-other branches.
-This means you should upgrade your system and ports tree to -current.
-Instructions on how to do this can be found at the
-<a href="../current.html">following current</a> page.
-It is also recommended that you subscribe to the ports and ports-changes
-mailing lists.
-This way, you will be notified about new or updated ports and about changes
-in the ports tree.
+Работа над новыми портами ведется в <a href="../faq5.html#Flavors">-current</a>;
+нет никакой гарантии, что новые порты или их обновления будут корректно
+работать в других версиях (branches).
+Это значит, что вы должны обновить свою систему и дерево портов до -current.
+Инструкцию, где описывается как это сделать, можно найти на странице
+<a href="../current.html">посвященной current</a>.
+Также рекомендуется подписаться на рассылки ports и ports-changes.
+Это поможет быть в курсе новых изменений в дереве портов и их обновлений.
 
 <h2 id="Testing">Тестирование</h2>
 
