[1.89] sync - faq/pf/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -113,20 +113,20 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq5.html#Diff"       >Подготовка Diff</a>
 </ul>
 
-<h3><a href="faq14.html">Настройка диска</a></h3>
+<h3><a href="faq14.html">Работаем с дисками</a></h3>
 <ul>
 <li><a href="faq14.html#intro"        >Диски и разделы</a>
 <li><a href="faq14.html#fdisk"        >Использование fdisk</a>
-<li><a href="faq14.html#disklabel"    >Disk Labels</a>
+<li><a href="faq14.html#disklabel"    >Использование disklabel</a>
 <li><a href="faq14.html#BootAmd64"    >Процесс загрузки amd64</a>
-<li><a href="faq14.html#SoftUpdates"  >Soft Updates</a>
-<li><a href="faq14.html#altroot"      >Root Partition Backup (/altroot)</a>
+<li><a href="faq14.html#SoftUpdates"  >Soft-обновление</a>
+<li><a href="faq14.html#altroot"      >Резервное копирование (backup) корневого раздела (/altroot)</a>
 <li><a href="faq14.html#DupFS"        >Дублирование ФС</a>
-<li><a href="faq14.html#Quotas"       >Disk Quotas</a>
-<li><a href="faq14.html#foreignfs"    >Доступ к другим ФС</a>
-<li><a href="faq14.html#MountImage"   >Подключение Disk Images</a>
+<li><a href="faq14.html#Quotas"       >Дисковые квоты</a>
+<li><a href="faq14.html#foreignfs"    >Доступ и работа с другими ФС</a>
+<li><a href="faq14.html#MountImage"   >Монтирование дисковых образов</a>
 <li><a href="faq14.html#GrowPartition">Увеличение размера раздела диска</a>
-<li><a href="faq14.html#softraid"     >Шифрование дисков и RAID</a>
+<li><a href="faq14.html#softraid"     >RAID и шифрование дисков</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq6.html">Работа в сети</a></h3>
