--- a/faq/index.html
+++ b/faq/index.html
@@ -34,7 +34,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 
 <table>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/faq10.html#Patches" >Security обновления</a></td>
+    <td><a href="https://www.openbsd.org/faq/faq10.html#Patches" >Обновления безопасности</a></td>
     <td><a href="https://man.openbsd.org">man-cтраницы</a></td>
     <td><a href="ports/index.html"   >Книга по портам</a></td>
   </tr>
@@ -80,7 +80,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 
 <h3><a href="https://www.openbsd.org/faq/faq10.html">System Management</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq10.html#Patches"   >Security обновления</a>
+<li><a href="https://www.openbsd.org/faq/faq10.html#Patches"   >Обновления безопасности</a>
 <li><a href="https://www.openbsd.org/faq/faq10.html#rc"        >Системные демоны</a>
 <li><a href="https://www.openbsd.org/faq/faq10.html#doas"      >Запуск программ от имени другого пользователя</a>
 <li><a href="https://www.openbsd.org/faq/faq10.html#vipw"      >Редактирование password файла</a>
