[1.35] update links - faq/ports/index.html

--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -17,24 +17,24 @@
 <i>Open</i><b>BSD</b></a>
 Настольная книга по портам
 <small>
-<a href="../index.html">[FAQ Index]</a>
+<a href="../index.html">[FAQ - На главную]</a>
 </small>
 </h2>
 <hr>
 
-<h3><a href="https://openbsd.org/faq/ports/ports.html">Работа с портами</a></h3>
+<h3><a href="ports.html">Работа с портами</a></h3>
 <ul>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsIntro"   >Введение</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsFetch"   >Привлекательность дерева портов</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsConfig"  >Настройка системы портов</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsSearch"  >Поиск дерева портов</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsInstall" >Простой пример установки</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsClean"   >Очистка после сборки</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsDelete"  >Удаление пакета портов</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsFlavors" >Использование Flavors и Subpackages</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#dpb"          >Использование dpb для сборки Multiple портов</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PortsSecurity">Обновление безопасности (-stable)</a>
-  <li><a href="https://openbsd.org/faq/ports/ports.html#PkgSig"       >Сигнатура пакетов</a>
+  <li><a href="ports.html#PortsIntro"   >Введение</a>
+  <li><a href="ports.html#PortsFetch"   >Скачиваем дерево портов</a>
+  <li><a href="ports.html#PortsConfig"  >Настройка системы портов</a>
+  <li><a href="ports.html#PortsSearch"  >Поиск дерева портов</a>
+  <li><a href="ports.html#PortsInstall" >Простой пример установки</a>
+  <li><a href="ports.html#PortsClean"   >Очистка после сборки</a>
+  <li><a href="ports.html#PortsDelete"  >Удаление пакета портов</a>
+  <li><a href="ports.html#PortsFlavors" >Использование Flavors и Subpackages</a>
+  <li><a href="ports.html#dpb"          >Использование dpb для сборки Multiple портов</a>
+  <li><a href="ports.html#PortsSecurity">Обновление безопасности (-stable)</a>
+  <li><a href="ports.html#PkgSig"       >Сигнатура пакетов</a>
 </ul>
 
 <h3><a href="https://openbsd.org/faq/ports/guide.html">Руководство по портам OpenBSD</a></h3>
